# WINGSV

./: .gitignore  .gitmodules  .prettierignore  README.md  package.json  pnpm-lock.yaml  prettier.config.cjs
.github/workflows/: ci.yml  release.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: byedpi_proxytest_strategies.list  proxytest_cloudflare.sites  proxytest_discord.sites  proxytest_general.sites  proxytest_googlevideo.sites  proxytest_social.sites  proxytest_youtube.sites  rustore_recommended_apps.json  xposed_init
app/src/main/byedpi/: Android.mk  Application.mk  main.h  native-lib.c
app/src/main/cpp/: CMakeLists.txt  wings_xposed_native.cpp
app/src/main/proto/: wingsv.proto
app/src/main/res/color/: profile_filter_text.xml
app/src/main/res/drawable/: bg_first_launch_badge.xml  bg_first_launch_glass_bar.xml  bg_first_launch_glass_card.xml  bg_first_launch_indicator.xml  bg_first_launch_indicator_selected.xml  bg_first_launch_inline_button.xml  bg_first_launch_permission_row.xml  bg_first_launch_primary_button.xml  bg_first_launch_top_scrim.xml  bg_profile_divider.xml  bg_profile_entry.xml  bg_profile_filter_chip.xml  bg_profile_ping_bad.xml  bg_profile_ping_good.xml  bg_profile_ping_warning.xml  bg_service_state_on.xml  ic_add.xml  ic_copy.xml  ic_delete.xml  ic_first_launch_autosearch_signal.xml  ic_first_launch_autosearch_wifi.xml  ic_profiles.xml  ic_sesl_arrow_enabled_down.xml  ic_sesl_arrow_enabled_up.xml  ic_share.xml  (+1 more)
config/checkstyle/: checkstyle.xml
config/pmd/: pmd.xml
gradle/: libs.versions.toml
(+221 files in other folders)
